<resources>
    <string name="app_name">My PlaylistMaker</string>
    <string name="TextSearch">Поиск</string>
    <string name="Media">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="display">Dispaly</string>
    <string name="share">Share</string>
    <string name="Contract">Пользовательское соглашение</string>
    <string name="Write_to_maintance">Написать в поддержку</string>
    <string name="Share_ign">Поделиться</string>
    <string name="dark_theme">Темная тема</string>
    <string name="settings_sign">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="subject_message">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="message">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="my_email">"danil377377@gmail.com"</string>
    <string name="share_link">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="contract_link">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="Nothing_found">Ничего не нашлось</string>
    <string name="InternetProblems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="Retry">Обновить</string>
    <string name="something_went_wrong">что тоо пошло не так\n</string>
    <string name="nothing_found">ничего не найдено\n</string>
    <string name="Mediatec">Медиатека</string>
    <string name="your_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="Create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_info">Редактировать информацию</string>

</resources>