<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsScreenBackStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <TextView
            style="@style/SettingsTextStyle"

            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings_sign"
            android:textFontWeight="500"
android:layout_marginTop="-2dp"
            android:textSize="@dimen/HeaderSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SettingsTextStyle"
                android:layout_gravity="center_vertical"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:thumbTint="@color/switcher_selector_thumb"
                app:trackTint="@color/switcher_selector"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26dp">

            <TextView
                style="@style/SettingsTextStyle"

                android:text="@string/Share_ign" />

            <ImageView style="@style/Share" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/write_to_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settingsMarginTop">

            <TextView
                style="@style/SettingsTextStyle"
                android:text="@string/Write_to_maintance" />

            <ImageView style="@style/Support" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settingsMarginTop">

            <TextView
                style="@style/SettingsTextStyle"
                android:text="@string/Contract" />

            <ImageView style="@style/Arrow_right" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>