<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    android:padding="@dimen/Padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="start"
            android:text="Playlist maker"
            android:textColor="@color/white"
            android:textSize="@dimen/HeaderSize" />


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"

        android:orientation="vertical">


        <Button
            style="@style/ButtonStyle"
            android:text="@string/TextSearch" />


        <Button
            android:id="@+id/media"
            style="@style/ButtonStyle"
            android:text="@string/Media" />

        <Button
            android:id="@+id/settings"
            style="@style/ButtonStyle"
            android:text="@string/Settings"

            />
    </LinearLayout>
</LinearLayout>