<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"

        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <ImageView
            android:id="@+id/playlist_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toTopOf="@id/header"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/header"
            style="@style/PlaylistHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="Best Song 2021"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/playlist_image"

            >

        </TextView>

        <TextView
            android:id="@+id/description"
            style="@style/PlaylistTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="2022"
            app:layout_constraintBottom_toTopOf="@id/track_counting"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/header"

            >

        </TextView>

        <TextView
            android:id="@+id/track_counting"
            style="@style/PlaylistTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="100 песен т 500 минут"
            app:layout_constraintBottom_toTopOf="@id/share_button"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/description"

            >

        </TextView>

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:src="@drawable/playlist_share"

            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/track_counting">

        </ImageView>

        <ImageView
            android:id="@+id/more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:src="@drawable/playlist_more"
            app:layout_constraintStart_toEndOf="@id/share_button"
            app:layout_constraintTop_toBottomOf="@id/track_counting">

        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout

        android:id="@+id/standard_bottom_sheet"
        style="@style/bottom_sheet_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            style="@style/handle_bottom_sheet"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_card"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/more_bottom_sheet"
        style="@style/bottom_sheet_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_peekHeight="383dp">

        <View
            style="@style/handle_bottom_sheet"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="8dp" />
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/playlist_image_bottom_view"
                    style="@style/PlaceHolder" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/playlist_name"
                style="@style/SongTextStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="66dp"
                android:layout_marginTop="10dp"
                android:text="56 songs"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playlist_quantity"
                style="@style/SingerName"
                android:layout_width="match_parent"
                android:layout_marginStart="66dp"
                android:singleLine="true"
                android:text="56 songs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/share_button_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/Share_ign"
            style="@style/TextStyle">

        </TextView>
        <TextView
            android:id="@+id/edit_info_button_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/edit_info"
            style="@style/TextStyle">

        </TextView>
        <TextView
            android:id="@+id/delete_playlist_button_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/delete_playlist"
            style="@style/TextStyle">

        </TextView>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>